[tool.poetry]
name = "cpah"
version = "0.1.0"
description = "Cyberpunk 2077 Autohacker"
authors = ["Jsh <jc@jsh.is>"]

[tool.poetry.dependencies]
python = "~3.7"
PySide2 = "^5.15.2"
opencv-python-headless = "^4.4.0"
PyAutoGUI = "^0.9.52"
Pillow = "^8.0.1"
pywin32 = "^300"
pydantic = "^1.7.3"
system_hotkey = "^1.0.3"
numpy = "1.19.3"
pytest = { version = "^6.2.1", optional = true }
pyinstaller = { version = "^4.1", optional = true }
mkdocs = { version = "^1.1.2", optional = true }
mkdocs-material = { version = "^6.2.3", optional = true}

[tool.poetry.extras]
test = ["pytest"]
build = ["pyinstaller"]
docs = ["mkdocs", "mkdocs-material"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
